# lindirstat-rs

./: .gitignore  .woodpecker.yml  Cargo.toml  README.md
crates/lindirstat/: Cargo.toml  build.rs
crates/lindirstat/src/: cli.rs  lib.rs  main.rs  model.rs  scan.rs  treemap.rs
crates/scanner/: Cargo.toml
crates/scanner/src/: main.rs
crates/wire/: Cargo.toml
crates/wire/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
