[workspace]
resolver = "2"
members = ["crates/wire", "crates/scanner", "crates/lindirstat", "xtask"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["AusAgentSmith <ausagentsmith@proton.me>"]

[workspace.dependencies]
lindirstat-wire = { path = "crates/wire" }
postcard = { version = "1", features = ["use-std"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
