[package]
name = "lindirstat"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "lindirstat"
path = "src/main.rs"

[[bin]]
name = "lindirstat-cli"
path = "src/cli.rs"

[dependencies]
lindirstat-wire.workspace = true
anyhow.workspace = true
clap.workspace = true
eframe = { version = "0.28", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.28"

[target.'cfg(not(target_os = "windows"))'.dependencies]
ssh2 = { version = "0.9", features = ["vendored-openssl"] }

[target.'cfg(target_os = "windows")'.dependencies]
ssh2 = "0.9"
